# zero2prod

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.old  spec.yaml
config/: local.yaml  production.yaml
migrations/: 20250217185413_add_status_subscriptions.sql  20250217185701_create_subscription_tokens_table.sql  20250305210345_create_idempotency_table.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs
src/domain/: mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/idempotency/: persistance.rs
src/routes/: confirm.rs  health_check.rs  mod.rs  newsletters.rs  subscriptions.rs
src/templates/emails/: newsletter.html
tests/: health_check.rs  mod.rs  subscribe.rs
tests/api/: confirm.rs  health_check.rs  mod.rs  subscribe.rs
