[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
axum = "0.8.1"
hyper = "1.6.0"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros"]}
config = { version = "0.15.7" }
chrono = "0.4.39"
uuid = { version = "1.13.1", features = ["v4"] }
tracing-subscriber = { version = "0.3.19", features = ["registry", "env-filter"] }
tracing = "0.1.41"
tower-http = { version = "0.6.2", features = ["trace"] }
tracing-bunyan-formatter = "0.3.10"
once_cell = "1.20.3"
lazy_static = "1.5.0"
tracing-log = "0.2.0"
serde-aux = "4.6.0"
thiserror = "2.0.11"
claim = "0.5.0"
validator = "0.20.0"
reqwest = { version = "0.12.12", default-features=false, features = ["json", "rustls-tls"] }
dotenv = "0.15.0"
serde_json = "1.0.138"
aws-config = "1.5.16"
aws-types = "1.3.5"
aws-sdk-ses = "1.62.0"
rand = { version = "0.8", features=["std_rng"] }

[dependencies.sqlx]
version = "0.8.3"
default-features=false
features=[
    "runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"
]

[dev-dependancies]
